--- a/jukebox/requirements.txt
+++ b/jukebox/requirements.txt
@@ -1,6 +1,6 @@
 fire==0.1.3
 tqdm>=4.45.0
-soundfile==0.10.3.post1
+soundfile
 unidecode==1.1.1
-numba==0.48.0
-librosa==0.7.2
+numba==0.56.4
+librosa==0.10.0
